# cmake_template

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  rgb2gray.cpp  run_semicircle_ruler.cpp
include/mypackage/: calc.hpp  rgb2gray.hpp
include/src/: calc.hpp
include/src/semicircle_ruler/: CMakeLists.txt  semicircle_ruler.hpp
src/: CMakeLists.txt  calc.cpp
src/geometry/: CMakeLists.txt
src/geometry/circle/: CMakeLists.txt  circle.cpp  circle.h
src/geometry/line/: CMakeLists.txt  line.cpp  line.h
src/geometry/shapes/: CMakeLists.txt  circle.cpp  circle.h  circle.hpp  line.cpp  line.h  line.hpp  square.cpp  square.hpp
src/include/src/: calc.hpp
src/metric/: CMakeLists.txt  i2m.cpp  i2m.h  i2m.hpp  m2i.cpp  m2i.h  m2i.hpp
src/mypackage/: CMakeLists.txt  calc.cpp  rgb2gray.cpp
src/mypackage/geometry/shapes/: CMakeLists.txt  circle.cpp  circle.hpp  square.cpp  square.hpp
src/mypackage/image/: CMakeLists.txt  image.cpp  image.hpp  image_eigen.cpp  image_eigen.hpp  image_xtensor.cpp  image_xtensor.hpp
src/mypackage/metric/: CMakeLists.txt  i2m.cpp  i2m.hpp
src/semicircle_ruler/: CMakeLists.txt  semicircle_ruler.cpp  semicircle_ruler.h  semicircle_ruler.hpp
tests/: CMakeLists.txt
tests/mypackage/: CMakeLists.txt  calc_test.cpp
tests/mypackage/geometry/shapes/: CMakeLists.txt  square_test.cpp
tests/mypackage/image/: CMakeLists.txt  test_image.cpp  test_image_eigen.cpp  test_image_xtensor.cpp
tests/mypackage/metric/: CMakeLists.txt  i2m_test.cpp
tests/src/: CMakeLists.txt  calc_test.cpp
tests/src/geometry/shapes/: CMakeLists.txt  circle.test.cpp  line_test.cpp  square_test.cpp
tests/src/metric/: CMakeLists.txt  i2m_test.cpp
